--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "apple-clone",
   "version": "0.1.0",
   "private": true,
+  "main": "./server/index.js",
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-scripts": "^1.0.10"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
